完成磁编波形显示

--- a/GimbleAssistant/GimbleAssistant.csproj
+++ b/GimbleAssistant/GimbleAssistant.csproj
@@ -32,8 +32,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Nobi.StatusChart">
+      <HintPath>C:\Users\Leon\AppData\Local\Temp\360zip$Temp\360$1\Nobi.StatusChart.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
