--- a/GimbleAssistant/GimbleAssistant.csproj
+++ b/GimbleAssistant/GimbleAssistant.csproj
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>nut_72px_567892_easyicon.net.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Nobi.StatusChart">
       <HintPath>C:\Users\Leon\AppData\Local\Temp\360zip$Temp\360$1\Nobi.StatusChart.dll</HintPath>
@@ -85,6 +88,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="48pxIcon.ico" />
+    <Content Include="nut_72px_567892_easyicon.net.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
